add header gallery js

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,7 @@
 @import './common';
-@import './example';
+@import './components';
+@import './visually-hidden';
+@import'./header';
+@import'./gallery';
+@import'./footer';
+@import'./modal';
