--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,11 @@
 <header class="header">
+    <nav>
+    <span>logo</span>
     <button id="home" type="button">Home</button>
     <button id="libary" type="button">My Libary</button>
+    </nav>
+
     <form id="form">
         <input type="text" name="input" />
-        <button type="submit">search</button>
     </form>
 </header>
