--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -1,15 +1,15 @@
-button{
-    border: transparent;
-        border-radius: 50px;
-        padding: 8px;
-        color: blue;
-        cursor: pointer;
+// button{
+//     border: transparent;
+//         border-radius: 50px;
+//         padding: 8px;
+//         color: blue;
+//         cursor: pointer;
 
-        &:hover,
-        &:focus{
-            color: white;
-            background-color: darkblue;
-        }
+//         &:hover,
+//         &:focus{
+//             color: white;
+//             background-color: darkblue;
+//         }
     
-}
+// }
 
