--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,21 +1,35 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 .header{
-position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 80px;
+    height: 230px;
     background-color: rgb(51, 99, 195);
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    padding: 40px 20px;
 }
 
 #form input {
     background-color: transparent;
-    border: 1px solid black;
-    border-radius: 50px;
+    // border:transparent;
+    border-bottom: 1px soliid black;
     color: aliceblue;
-    padding: 8px;
 }
+nav{
+    
 
+    margin-bottom: 50px;
+
+button {
+        border: transparent;
+        background-color: transparent;
+        color: white;
+        cursor: pointer;
+
+        &:hover,
+        &:focus {
+            color: red;
+           
+        }
+
+    }
+}
