--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,5 @@
 <footer id="footer">
-    <button id="decrementBtn">prew</button>
-    <button id="incrementBtn">next</button>
+    <span>© 2020 | All Rights Reserved |</span>
+
+
 </footer>
