--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,13 @@
 <main>
-    <ul class="gallery__list"></ul>
+    <ul id="gallery__list"></ul>
+    <div id="libary" class="visually-hidden">
+        <h2>Oooops!!!</h2>
+    </div>
+    <div id="gallery__option">
+<button id="decrementBtn">prew</button>
+<button id="incrementBtn">next</button>
+    </div>
+   
 </main>
 <div id="backdrop" class="visually-hidden">
 
