--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,17 +1,8 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 
 footer {
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 40px;
+   padding: 12px;
     background-color: rgb(51, 99, 195);
-
-    button{
-    width: 15%;
-    }
+    text-align: center;
+    
 }
