--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -4,26 +4,49 @@
     background-color: rgb(51, 99, 195);
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding: 40px 20px;
+    @media screen and (min-width: 768px) {
+        height: 216px;
+        padding: 40px 32px;
+        }
+    
 }
+#form{
 
+margin: 0 auto;
+@media screen and (min-width: 768px) {
+    width: 400px;
+    }
+}
 #form input {
+width: 100%;
     background-color: transparent;
-    // border:transparent;
-    border-bottom: 1px soliid black;
+    border:none;
+    border-bottom: 1px solid black;
     color: aliceblue;
+  
+    &::placeholder{
+        color: rgba(255, 255, 255, 0.85);
+    }
 }
 nav{
-    
-
+    width: 100%;
     margin-bottom: 50px;
 
+
+    span{
+        margin-right:auto;
+    }
+
 button {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 14px;
         border: transparent;
         background-color: transparent;
         color: white;
         cursor: pointer;
+        margin-left: auto;
 
         &:hover,
         &:focus {
@@ -31,5 +54,37 @@ button {
            
         }
 
+    }
+}
+#homeBtn{
+    margin-left: 112px;
+    @media screen and (min-width: 768px) {
+        margin-left: 420px;
+        }
+                  @media screen and (min-width: 1200px) {
+                      margin-left: 820px;
+                  }
+}
+#libaryBtn{
+    margin-left: 40px;
+}
+
+#libary__options{
+    margin: 0 auto;
+
+    button{
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 16px;
+        background-color: transparent;
+        border: 1px solid black;
+        border-radius: 5px;
+        padding: 8px;
+        color: white;
+        &:hover,
+        &:focus{
+            color: blue;
+            background-color: white;
+        }
     }
 }
