--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
 <main>
-    <ul id="gallery__list"></ul>
+    <ul id="gallery"></ul>
     <div id="libary" class="visually-hidden">
         <h2>Oooops!!!</h2>
     </div>
