--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,7 +9,7 @@
         <input type="text" name="input" placeholder="search"/>
         <span id="error-info"></span>
     </form>
-    <div id="libary__options" class=" visually-hidden">
+    <div id="libaryOptions" class="visually-hidden">
         <button id="watched">Watched</button>
         <button id="queue">Queue</button>
     </div>
