--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,5 +1,5 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
-#gallery__list{
+#gallery{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 10px;
