--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,12 +1,12 @@
 <main>
   <ul id="gallery"></ul>
-  <div id="libary" class="visually-hidden">
- 
-  </div>
+  <div id="libary" class="visually-hidden"></div>
 
   <div id="gallery__option">
     <button id="decrementBtn">prew</button>
     <button id="incrementBtn">next</button>
   </div>
 </main>
-<div id="backdrop" class="visually-hidden"></div>
+
+
+
