--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -14,6 +14,9 @@ img{
 }
 body{
 font-family: 'Roboto', sans-serif;
+font-weight: 500;
+font-size: 12px;
+line-height: 16px;
 }
 .container{
     margin-left: auto;
