--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -1,15 +1,4 @@
-// button{
-//     border: transparent;
-//         border-radius: 50px;
-//         padding: 8px;
-//         color: blue;
-//         cursor: pointer;
-
-//         &:hover,
-//         &:focus{
-//             color: white;
-//             background-color: darkblue;
-//         }
-    
-// }
+button{
+cursor: pointer;
+}
 
