--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -6,6 +6,7 @@
     <button id="decrementBtn">prew</button>
     <button id="incrementBtn">next</button>
   </div>
+  <div id="backdrop" class="visually-hidden"></div>
 </main>
 
 
