--- a/src/partials/card.html
+++ b/src/partials/card.html
@@ -1,5 +1,5 @@
-<div id="backdrop" class="visually-hidden">
-  <div class="card">
+
+  <!-- <div class="card" id=${id}>
     <button class="close-card" data-action="close-modal">close</button>
     <div class="img-wrap">
       <img class="card__img" src="./images/cinema.jpg" alt="cinema" />
@@ -37,5 +37,5 @@
         <button data-action="add-queue">add to queue</button>
       </div>
     </div>
-  </div>
-</div>
+  </div> -->
+
