--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
 
     <form id="form">
         <input type="text" name="input" placeholder="search"/>
-        <span id="error-info"></span>
+        <p id="errorInfo"></p>
     </form>
     <div id="libaryOptions" class="visually-hidden">
         <button id="watched">Watched</button>
