--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -10,6 +10,7 @@
         color: black;
         padding: 10px;
         border-radius: 4px;
+        cursor: pointer;
 }
 .info-wrap {
     pointer-events: none;
