--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -1,5 +1,5 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
-#backdrop {
+.backdrop {
   z-index: 10;
   position: fixed;
   top: 0;
