--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -1,102 +1,139 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 .backdrop {
   z-index: 10;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-  overflow: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 .modal {
   position: absolute;
-  top: 5vw;
-  left: 5vw;
-  right: 5vw;
-  bottom: 5vw;
+  border-radius: 5px;
   background-color: #fff;
-  padding: 48px 20px;
-  overflow: auto;
-  @media screen and(min-width:476px){
-  right: 15vw;
-    left: 15vw;
+  padding: 48px 20px 40px 20px;
+  overflow-y: auto;
+
+  margin: auto;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  max-height: 90%;
+
+  @media screen and(min-width:420px) {
+    max-width: 420px;
   }
 
   @media screen and(min-width:768px) {
     max-width: 704px;
-    padding: 0px;
+    height: 522px;
+
+    // top: 50%;
+    // left: 50%;
+    // transform: translate(-50%, -50%);
+    padding: 40px 64px 40px 44px;
     display: flex;
   }
-  @media screen and(min-width:1200px) {
-    top: 50%;
-    left: 50%;
-    right: auto;
-    bottom: auto;
-    transform: translate(-50%, -50%);
 
+  @media screen and(min-width:1200px) {
     max-width: 806px;
-  }
-}
-
-.img-wrap {
-  margin-bottom: 20px;
-    img {
-        border-radius: 5px;
-      }
-
-  @media screen and(min-width:768px) {
-    width: 50%;
-    margin-bottom: 0;
-    padding: 40px;
-  }
-
-  @media screen and(min-width:1200px) {
     padding: 40px 12px;
   }
 }
 
-.description-wrap {
+.modal__img-wrap {
+  margin-bottom: 20px;
+
   @media screen and(min-width:768px) {
-    width: 50%;
-    padding: 40px;
+    width: 264px;
+    height: 374px;
+
+    margin-bottom: 0;
+    margin-right: 68px;
   }
 
   @media screen and(min-width:1200px) {
-    padding: 40px 4px;
+    width: 375px;
+    height: 478px;
+
+
   }
 }
 
-.card__title {
+.modal__img {
+  display: block;
+  border-radius: 5px;
+  width: 100%;
+  height: auto;
+  object-fit: fill;
+}
+
+.modal__description-wrap {
+  @media screen and(min-width:768px) {
+    width: 264px;
+  }
+
+  @media screen and(min-width:1200px) {
+    width: 391px;
+
+  }
+}
+
+.modal__title {
   font-size: 20px;
-  line-height: 23px;
+  line-height: 1.15;
   margin-bottom: 20px;
 
   @media screen and(min-width:1200px) {
     font-size: 30px;
-    line-height: 35px;
+    line-height: 1.16;
   }
 }
 
-.card__info {
+.moal__info {
   margin-bottom: 20px;
+  font-size: 12px;
+  line-height: 1.33;
+
   td {
     width: 50%;
   }
 }
 
-.card__option {
-  text-align: center;
-  @media screen and(min-width:768px){
-    display: flex;
+.modal__about-title {
+  font-size: 12px;
+  line-height: 1.33;
+}
+
+.modal__about-text {
+  font-size: 12px;
+  line-height: 1.66;
+  margin-bottom: 20px;
+}
+
+.modal__option {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  @media screen and(min-width:768px) {
+    justify-content: space-around;
+  }
+
+  @media screen and(min-width:1200px) {
+    justify-content: flex-start;
   }
 
   button {
+    text-transform: uppercase;
     font-weight: bold;
     font-size: 12px;
     line-height: 16px;
-    padding: 13px;
+    background-color: transparent;
     border-radius: 5px;
+
     &:hover {
       background-color: #ff6b01;
       color: white;
@@ -105,20 +142,46 @@
   }
 }
 
+.btn-add-wached {
+  padding: 6px 27px;
+
+  @media screen and(min-width:768px) {
+    padding: 14px 9px;
+  }
+
+  @media screen and(min-width:1200px) {
+    padding: 14px 10px 12px 10px;
+    margin-right: 23px;
+  }
+}
+
+.btn-add-queue {
+  padding: 13px;
+
+  @media screen and(min-width:768px) {
+    padding: 14px 7px;
+  }
+
+  @media screen and(min-width:1200px) {
+    padding: 14px 8px 12px 8px;
+  }
+}
+
 .card__about {
   margin-bottom: 20px;
   line-height: 20px;
 }
 
-.close-modal {
+.modal__close {
   position: absolute;
   border: transparent;
-  border-radius: 50%;
-  padding: 5px;
-  top: 20px;
-  right: 20px;
+  background-color: transparent;
+  width: 30px;
+  height: 30px;
+  top: 0;
+  right: 0;
+
   &:hover {
-    background-color: #ff6b01;
-    color: white;
+    color: #ff6b01;
   }
 }
