--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -43,24 +43,6 @@
   }
 }
 
-.modal__img-wrap {
-  margin-bottom: 20px;
-
-  @media screen and(min-width:768px) {
-    width: 264px;
-    height: 374px;
-
-    margin-bottom: 0;
-    margin-right: 68px;
-  }
-
-  @media screen and(min-width:1200px) {
-    width: 375px;
-    height: 478px;
-
-
-  }
-}
 
 .modal__img {
   display: block;
@@ -68,6 +50,23 @@
   width: 100%;
   height: auto;
   object-fit: fill;
+  margin-bottom: 20px;
+    
+      @media screen and(min-width:768px) {
+        margin: 0;
+        width: 264px;
+        height: 374px;
+    
+        margin-bottom: 0;
+        margin-right: 68px;
+      }
+    
+      @media screen and(min-width:1200px) {
+        width: 375px;
+        height: 478px;
+    
+    
+      }
 }
 
 .modal__description-wrap {
