--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -21,25 +21,20 @@
   top: 0;
   bottom: 0;
   max-height: 90%;
-
-  @media screen and(min-width:420px) {
-    max-width: 420px;
-  }
+  max-width: 280px;
 
   @media screen and(min-width:768px) {
     max-width: 704px;
     height: 522px;
-
-    // top: 50%;
-    // left: 50%;
-    // transform: translate(-50%, -50%);
     padding: 40px 64px 40px 44px;
     display: flex;
   }
 
   @media screen and(min-width:1200px) {
     max-width: 806px;
+      max-height: 558x;
     padding: 40px 12px;
+        overflow: visible;
   }
 }
 
@@ -49,14 +44,12 @@
   border-radius: 5px;
   width: 100%;
   height: auto;
-  object-fit: fill;
   margin-bottom: 20px;
     
       @media screen and(min-width:768px) {
         margin: 0;
         width: 264px;
         height: 374px;
-    
         margin-bottom: 0;
         margin-right: 68px;
       }
@@ -91,16 +84,41 @@
   }
 }
 
-.moal__info {
+.modal__info {
   margin-bottom: 20px;
   font-size: 12px;
   line-height: 1.33;
+    width: 100%;
+    &-key {
+        color: #8c8c8c;
+      }
+    
+      &-value {
+        color:black;
+      }
 
   td {
     width: 50%;
   }
 }
+.modal__info-value--accent {
+  display: inline-block;
+  width: 36px;
+  height: 16px;
+  text-align: center;
+  border-radius: 5px;
+  color:white;
+  background-color:#ff6b01;
+}
 
+.modal__info-key--accent {
+  display: inline-block;
+  width: 36px;
+  height: 16px;
+  text-align: center;
+  border-radius: 5px;
+  background-color: #f7f7f7;
+}
 .modal__about-title {
   font-size: 12px;
   line-height: 1.33;
@@ -121,18 +139,30 @@
     justify-content: space-around;
   }
 
-  @media screen and(min-width:1200px) {
-    justify-content: flex-start;
-  }
 
   button {
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 16px;
-    background-color: transparent;
-    border-radius: 5px;
+text-transform: uppercase;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 1.33;
+  background-color: transparent;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
+  padding: 0;
+  margin: 0;
+  width: 110px;
+  height: 44px;
+
+    @media screen and(min-width:768px) {
+      width: 125px;
+      }
+    
+      @media screen and(min-width:1200px) {
+    width: 136px;
+      }
     &:hover {
       background-color: #ff6b01;
       color: white;
@@ -141,30 +171,6 @@
   }
 }
 
-.btn-add-wached {
-  padding: 6px 27px;
-
-  @media screen and(min-width:768px) {
-    padding: 14px 9px;
-  }
-
-  @media screen and(min-width:1200px) {
-    padding: 14px 10px 12px 10px;
-    margin-right: 23px;
-  }
-}
-
-.btn-add-queue {
-  padding: 13px;
-
-  @media screen and(min-width:768px) {
-    padding: 14px 7px;
-  }
-
-  @media screen and(min-width:1200px) {
-    padding: 14px 8px 12px 8px;
-  }
-}
 .modal__close {
   position: absolute;
   border: transparent;
