--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -18,9 +18,9 @@
   <ul class="gallery"></ul>
   <div  class="libary visually-hidden"></div>
 
-  <div id="gallery__option">
-    <button id="decrementBtn">prew</button>
-    <button id="incrementBtn">next</button>
+  <div class="gallery__option">
+    <button  class="prew-btn">prew page</button>
+    <button  class="next-btn">next page</button>
   </div>
 </main>
 <footer >
