--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -15,10 +15,19 @@
 .info-wrap {
     pointer-events: none;
 }
-#gallery__option{
-    text-align: center;
-    button{
-        width: 15%;
-    }
+
+.gallery__option{
+    background-color: gray;
+  
+   display: flex;
+   align-items: center;
+   justify-content: space-around;
+   
+}
+.libary__options{
+    display: flex;
+     align-items: center;
+    justify-content: center;
+  
 }
 
