add pagination box

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -20,10 +20,13 @@
 
   <div class="gallery__option">
     <button  class="prew-btn">prew page</button>
+      <div class="pagination"></div>
     <button  class="next-btn">next page</button>
   </div>
+
 </main>
 <footer >
   <span>© 2022 | All Rights Reserved |</span>
 </footer>
 <div class="backdrop visually-hidden"></div>
+
