add onClick pagination

--- a/src/sass/layout/_pagination.scss
+++ b/src/sass/layout/_pagination.scss
@@ -4,4 +4,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    button:hover{
+    background-color: aqua;
+    }
+}
+.current-page{
+    background-color: aqua;
 }
