--- a/src/sass/layout/_pagination.scss
+++ b/src/sass/layout/_pagination.scss
@@ -12,3 +12,10 @@
 .current-page{
     background-color: aqua;
 }
+.page-number-box{
+
+    width: 160px;
+display: flex;
+align-items: center;
+justify-content: space-between;
+}
