--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -2,31 +2,36 @@
   <nav class="header__nav">
     <span class="header__logo">logo</span>
     <button class="header__btn-home" type="button">Home</button>
-    <button class="header__btn-libary"  type="button">My Libary</button>
+    <button class="header__btn-libary" type="button">My Libary</button>
   </nav>
-  
+
   <form class="form">
     <input type="text" name="input" placeholder="search" />
   </form>
 
-  <div  class="libary__options visually-hidden">
+  <div class="libary__options visually-hidden">
     <button class="libary__options-watched">Watched</button>
     <button class="libary__options-queue">Queue</button>
   </div>
 </header>
 <main>
   <ul class="gallery"></ul>
-  <div  class="libary visually-hidden"></div>
+  <div class="libary visually-hidden"></div>
 
   <div class="gallery__option">
-    <button  class="prew-btn">prew page</button>
-      <div class="pagination"></div>
-    <button  class="next-btn">next page</button>
-  </div>
+    <button class="prew-btn">prew page</button>
+    <div class="pagination"></div>
 
+    <!-- <div class="page-number-box">
+      <span class="current-page-text">Current page</span>
+      <span class="current-page-namber"></span><span>of</span>
+      <span class="total-page-number"></span>
+    </div> -->
+
+    <button class="next-btn">next page</button>
+  </div>
 </main>
-<footer >
+<footer>
   <span>© 2022 | All Rights Reserved |</span>
 </footer>
 <div class="backdrop visually-hidden"></div>
-
