--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -2,7 +2,7 @@
 
 footer {
    padding: 12px;
-    background-color: rgb(51, 99, 195);
+    background-color: var(--secondary-color);
     text-align: center;
     
 }
