--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,6 +1,8 @@
 :root {
   --primery-text-color: #000000;
+  --black-color:#000000
   --accent-text-color: #ff6b08;
   --white-colore: #ffffff;
   --activ-btn-color: #ff6b01;
+  --secondary-color:#808080;
 }
