--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -20,7 +20,7 @@
   <div class="gallery__option">
    
     <div class="pagination">
-      <button class="prew-btn">prew list</button>
+      <button class="prew-btn visually-hidden">prew list</button>
       <button class="pangination__btn ">1</button>
       <button class="pangination__btn ">2</button>
       <button class="pangination__btn ">3</button>
