pagination is ready

--- a/src/sass/layout/_components.scss
+++ b/src/sass/layout/_components.scss
@@ -14,8 +14,7 @@ button {
 
     color: black;
   
-    &:hover,
-    &:focus {
+    &:hover {
     color: blue;
       background-color: white;
     }
