begin pagination service

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -37,3 +37,4 @@
   <span>© 2022 | All Rights Reserved |</span>
 </footer>
 <div class="backdrop visually-hidden"></div>
+<div class="test-root"></div>
