--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -18,19 +18,8 @@
   <ul class="gallery"></ul>
 
   <div class="gallery__option">
-   
-    <div class="pagination">
-      <!-- <button class="prev-btn visually-hidden">prew list</button>
-      <button class="pangination__btn ">1</button>
-      <button class="pangination__btn ">2</button>
-      <button class="pangination__btn ">3</button>
-      <button class="pangination__btn ">4</button>
-      <button class="pangination__btn ">5</button>
-      <button class="pangination__btn ">6</button>
-      <button class="last-page">last</button>
-      <button class="next-btn">next list</button> -->
-    </div>
-   
+    <div class="pagination"></div>
+ 
   </div>
 </main>
 <footer>
