--- a/src/sass/layout/_pagination.scss
+++ b/src/sass/layout/_pagination.scss
@@ -1,10 +1,13 @@
 .pagination{
     margin: 0 auto;
-    width: 280px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 10px;
+button{
 
+    width: 44px;
+}
     button:hover{
     background-color: aqua;
     }
