--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -12,9 +12,6 @@
   position: absolute;
   border-radius: 5px;
   background-color: #fff;
-  padding: 48px 20px 40px 20px;
-  overflow-y: auto;
-
   margin: auto;
   right: 0;
   left: 0;
@@ -26,14 +23,25 @@
   @include tablet {
     max-width: 704px;
     max-height: 522px;
-    padding: 40px 64px 40px 44px;
-    display: flex;
   }
 
   @include desktop {
     max-width: 806px;
     max-height: 558x;
-    padding: 40px 12px;
+  }
+}
+.modal__card {
+  max-width: 100%;
+  height: 100%;
+  padding: 16px;
+  overflow-y: auto;
+  @include tablet {
+    padding: 24px;
+    display: flex;
+    gap: 20px;
+  }
+
+  @include desktop {
     overflow: visible;
   }
 }
@@ -50,7 +58,7 @@
     width: 264px;
     height: 374px;
     margin-bottom: 0;
-    margin-right: 68px;
+ 
   }
 
   @include desktop {
@@ -60,13 +68,11 @@
 }
 
 .modal__description-wrap {
-  @include tablet {
-    width: 264px;
-  }
+ display: flex;
+ flex-direction: column;
+flex-grow: 1;
 
-  @include desktop {
-    width: 391px;
-  }
+
 }
 
 .modal__title {
@@ -121,6 +127,7 @@
 }
 
 .modal__about-text {
+  flex-grow: 1;
   font-size: 12px;
   line-height: 1.66;
   margin-bottom: 20px;
@@ -136,7 +143,7 @@
   }
 
   button {
-    width: 110px;;
+    width: 110px;
     height: 44px;
 
     @include tablet {
@@ -157,8 +164,9 @@
   background-color: #ff6b01;
   color: white;
   border: transparent;
-
 }
+
+
 .modal__close {
   position: absolute;
   border: transparent;
