--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -31,6 +31,9 @@
   }
 }
 .modal__card {
+  // position: absolute;
+  // top: 0;
+  // left: 0;
   max-width: 100%;
   height: 100%;
   padding: 16px;
@@ -58,7 +61,6 @@
     width: 264px;
     height: 374px;
     margin-bottom: 0;
- 
   }
 
   @include desktop {
@@ -68,11 +70,9 @@
 }
 
 .modal__description-wrap {
- display: flex;
- flex-direction: column;
-flex-grow: 1;
-
-
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .modal__title {
@@ -166,7 +166,6 @@ flex-grow: 1;
   border: transparent;
 }
 
-
 .modal__close {
   position: absolute;
   border: transparent;
@@ -178,5 +177,23 @@ flex-grow: 1;
 
   &:hover {
     color: #ff6b01;
+  }
+}
+.modal__btn-play{
+  z-index: 20;
+  position: absolute;
+    top: 10px;
+    left: 10px;
+}
+.video-wrap{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  iframe{
+    width: 100%;
+    height: 100%;
+
   }
 }
