--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -31,9 +31,6 @@
   }
 }
 .modal__card {
-  // position: absolute;
-  // top: 0;
-  // left: 0;
   max-width: 100%;
   height: 100%;
   padding: 16px;
@@ -48,31 +45,39 @@
     overflow: visible;
   }
 }
-
+.modal__content{
+position: relative;
+  margin-bottom: 20px;
+  @include tablet {
+    width: 40%;
+      margin-bottom: 0;
+    }
+  
+}
 .modal__img {
   display: block;
   border-radius: 5px;
   width: 100%;
-  height: auto;
-  margin-bottom: 20px;
+  height: 100%;
 
-  @include tablet {
-    margin: 0;
-    width: 264px;
-    height: 374px;
-    margin-bottom: 0;
-  }
-
-  @include desktop {
-    width: 375px;
-    height: 478px;
-  }
 }
 
 .modal__description-wrap {
+
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  @include tablet {
+  width: 60%;
+    }
+  
+    // @include desktop {
+    //   width: 65%;
+    // }
+
+  
+
+ 
 }
 
 .modal__title {
@@ -179,21 +184,36 @@
     color: #ff6b01;
   }
 }
-.modal__btn-play{
-  z-index: 20;
-  position: absolute;
-    top: 10px;
-    left: 10px;
-}
-.video-wrap{
-  position: absolute;
-  top: 0;
-  left: 0;
+.video-frame{
   width: 100%;
-  height: 100%;
-  iframe{
+    height: 60%;
+  @include tablet{
+  position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
-    height: 100%;
-
+    height: 60%
   }
+;
+
+
+
+
 }
+.modal__btn-play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 0;
+  width: 68px;
+  height: 48px;
+  border: none;
+  background-color: #ff6b01;
+  color:white;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+}
+
+
+
