--- a/src/sass/layout/_pagination.scss
+++ b/src/sass/layout/_pagination.scss
@@ -1,17 +1,19 @@
-.pagination{
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
-button{
+.pagination {
+  margin: 0 auto;
+  background-color: gray;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 10px;
+  width: 320px;
+  button {
+    width: 32px;
 
-    width: 44px;
+  }
+  button:hover {
+    background-color: #ff6b01;
+  }
 }
-    button:hover{
-    background-color: aqua;
-    }
-}
-.current-page{
-    background-color: aqua;
+.current-page {
+  background-color:#ff6b01;
 }
