--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -24,5 +24,13 @@
   
     }
 }
+.library__options{
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+  width: 280px;
+  margin: 0 auto;
+
+}
 
 
