--- a/src/sass/utils/_visually-hidden.scss
+++ b/src/sass/utils/_visually-hidden.scss
@@ -11,3 +11,8 @@
     clip-path: inset(50%);
     margin: -1px;
 }
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
