--- a/src/sass/layout/_components.scss
+++ b/src/sass/layout/_components.scss
@@ -17,6 +17,7 @@ button {
   margin-left: auto;
   margin-right: auto;
   background-color: #f1f1f1;
+  padding: 15px;
 
   @include mobile {
     width: 320px;
