--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -1,16 +1,28 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 .gallery{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 10px;
+  margin: 0 auto;
+    @include tablet {
+            display: grid;
+        grid-template-columns: repeat(3, 240px);
+            gap: 10px;
+        }
+    
+        @include desktop {
+    grid-template-columns: repeat(4, 300px);
+        gap: 15px;
+        }
    
 }
 .gallery__item{
+    margin-bottom: 12px;
         background-color: white;
         color: black;
         padding: 10px;
         border-radius: 4px;
         cursor: pointer;
+        @include tablet{
+            margin: 0;
+        }
 }
 .info-wrap {
     pointer-events: none;
