--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,18 +1,27 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 .header {
-  height: 180px;
+  height: 140px;
+  padding: 24px;
+
+    button {
+        width: 74px;
+        height: 24px;
+      }
 }
 .header__nav{
-  display: inline-flex;
+  display:flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   gap: 15px;
   margin-bottom: 20px;
+  @include tablet {
+    justify-content: flex-end;
+    }
 }
 .form {
   margin: 0 auto;
   @include tablet {
-    width: 400px;
+    width: 320px;
   }
 
     input {
@@ -26,9 +35,10 @@
 .library__options{
   display: flex;
   align-items: center;
-  justify-content:space-between;
-  width: 280px;
+  justify-content:center;
+  gap :15px;
   margin: 0 auto;
+
 
 }
 
