change trailer window

--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -1,4 +1,3 @@
-@import '~node_modules/modern-normalize/modern-normalize.css';
 .backdrop {
   z-index: 10;
   position: fixed;
@@ -7,11 +6,13 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
+  transition: all 0.8s ease 0s;
 }
+
 .modal {
   position: absolute;
   border-radius: 5px;
-  background-color: #fff;
+  background-color: var(--white-colore);
   margin: auto;
   right: 0;
   left: 0;
@@ -19,10 +20,12 @@
   bottom: 0;
   max-height: 90%;
   max-width: 280px;
+  padding: 32px 16px;
 
   @include tablet {
     max-width: 704px;
-    max-height: 522px;
+    max-height: 552px;
+
   }
 
   @include desktop {
@@ -30,13 +33,13 @@
     max-height: 558x;
   }
 }
+
 .modal__card {
   max-width: 100%;
   height: 100%;
-  padding: 16px;
-  overflow-y: auto;
+  overflow: auto;
+
   @include tablet {
-    padding: 24px;
     display: flex;
     gap: 20px;
   }
@@ -45,36 +48,38 @@
     overflow: visible;
   }
 }
-.modal__content{
-position: relative;
+
+.modal__content {
+  position: relative;
   margin-bottom: 20px;
+
   @include tablet {
     width: 40%;
-      margin-bottom: 0;
-    }
-  
+    margin-bottom: 0;
+  }
 }
+
 .modal__img {
   display: block;
   border-radius: 5px;
   width: 100%;
-  height: 100%;
-
+  height: auto;
+  object-fit: contain;
 }
 
 .modal__description-wrap {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+
   @include tablet {
-  width: 60%;
-    }
+    width: 60%;
+  }
 }
 
 .modal__title {
   font-size: 20px;
   line-height: 1.15;
-  margin-bottom: 20px;
+  margin: 0 0 20px 0;
 
   @include desktop {
     font-size: 30px;
@@ -84,32 +89,39 @@ position: relative;
 
 .modal__info {
   margin-bottom: 20px;
+  font-weight: 500;
   font-size: 12px;
   line-height: 1.33;
   width: 100%;
+
   &-key {
     color: #8c8c8c;
   }
 
   &-value {
-    color: black;
+    color: var(--primery-text-color);
   }
 
   td {
     width: 50%;
   }
 }
+
 .modal__info-value--accent {
   display: inline-block;
   width: 36px;
   height: 16px;
   text-align: center;
   border-radius: 5px;
-  color: white;
-  background-color: #ff6b01;
+  color: var(--white-colore);
+  background-color: var(--activ-btn-color);
 }
 
-.modal__info-key--accent {
+.modal__info-value--slash {
+  color: #8c8c8c;
+}
+
+.modal__info-value--grey {
   display: inline-block;
   width: 36px;
   height: 16px;
@@ -117,16 +129,21 @@ position: relative;
   border-radius: 5px;
   background-color: #f7f7f7;
 }
+
 .modal__about-title {
+  text-transform: uppercase;
+  font-weight: 500;
   font-size: 12px;
   line-height: 1.33;
+  margin: 0 0 8px 0;
 }
 
 .modal__about-text {
   flex-grow: 1;
+  font-weight: 500;
   font-size: 12px;
   line-height: 1.66;
-  margin-bottom: 20px;
+  margin: 0 0 20px 0;
 }
 
 .modal__option {
@@ -139,8 +156,22 @@ position: relative;
   }
 
   button {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 1.33;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 0;
+    margin: 0;
     width: 110px;
     height: 44px;
+
+    transform: scale(1);
+    transition: all 0.3s ease 0s;
 
     @include tablet {
       width: 125px;
@@ -149,75 +180,122 @@ position: relative;
     @include desktop {
       width: 136px;
     }
+
     &:hover {
-      background-color: #ff6b01;
-      color: white;
+      background-color: var(--activ-btn-color);
+      color: var(--white-colore);
       border: transparent;
+      transform: scale(1.1);
     }
   }
 }
+
 .isActive {
-  background-color: #ff6b01;
-  color: white;
+  background-color: var(--activ-btn-color);
+  color: var(--white-colore);
   border: transparent;
+
+  &:hover {
+    background-color: var(--white-colore);
+    color: var(--activ-btn-color);
+  }
 }
 
 .modal__close {
+  z-index: 5;
   position: absolute;
   border: transparent;
   background-color: transparent;
   width: 30px;
   height: 30px;
-  top: 0;
-  right: 0;
+  top: 4px;
+  right: 4px;
+  font-weight: 700;
+  transform: scale(1);
+  transition: all 0.6s ease 0s;
+
+  @include tablet {
+    top: 8px;
+    right: 8px;
+  }
 
   &:hover {
-    color: #ff6b01;
+    fill: var(--activ-btn-color);
+    transform: scale(1.1);
   }
 }
-.video-frame{
-  width: 100%;
-    height: 60%;
-  @include tablet{
+
+.modal__close-icon {
+  pointer-events: none;
+}
+
+.modal__video {
   position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  z-index: 30;
+  margin: auto;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  aspect-ratio: 16 / 9;
+
+  .video-frame {
+    position: absolute;
     width: 100%;
-    height: 60%
+    height: 100%;
   }
 }
+
 .modal__btn-play {
   text-transform: uppercase;
   position: absolute;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
   padding: 0;
   width: 68px;
   height: 48px;
   border: none;
-  border-radius: 5px;
-  background-color: #ff6b01;
-  color: white;
-  transform: translate(-50%, -50%);
+  border-radius: 15px;
+  background-color: white;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal__content:hover .modal__play-icon,
+.modal__content:focus .modal__play-icon {
+  transform: scale(1.2);
+
+}
+
+.modal__play-icon {
+  position: absolute;
+  width: 90px;
+  height: 75px;
+  pointer-events: none;
+  fill: #ff0000;
+  transform: scale(1);
+  transition: all 0.6s ease 0s;
 }
 
 .modal__btn-close-trailer {
-  text-transform: uppercase;
+  z-index: 35;
   position: absolute;
   border: transparent;
   background-color: transparent;
   width: 30px;
   height: 30px;
   top: 8px;
-  right: 8;
+  right: 8px;
   font-weight: 700;
+  fill: white;
+  transform: scale(1);
+  transition: all 0.6s ease 0s;
 
   &:hover {
     fill: var(--activ-btn-color);
+    transform: scale(1.1);
   }
 }
-
-
-
