--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -12,7 +12,7 @@
 .modal {
   position: absolute;
   border-radius: 5px;
-  background-color: var(--white-colore);
+  background-color: white;
   margin: auto;
   right: 0;
   left: 0;
@@ -113,8 +113,8 @@
   height: 16px;
   text-align: center;
   border-radius: 5px;
-  color: var(--white-colore);
-  background-color: var(--activ-btn-color);
+  color: white;
+  background-color: #53a1cb;
 }
 
 .modal__info-value--slash {
@@ -156,20 +156,8 @@
   }
 
   button {
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 1.33;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    padding: 0;
-    margin: 0;
     width: 110px;
     height: 44px;
-
     transform: scale(1);
     transition: all 0.3s ease 0s;
 
@@ -182,22 +170,19 @@
     }
 
     &:hover {
-      background-color: var(--activ-btn-color);
-      color: var(--white-colore);
-      border: transparent;
       transform: scale(1.1);
     }
   }
 }
 
 .isActive {
-  background-color: var(--activ-btn-color);
-  color: var(--white-colore);
+  background-color: #f402a2;
+  color: white;
   border: transparent;
 
   &:hover {
-    background-color: var(--white-colore);
-    color: var(--activ-btn-color);
+    background-color: #53a1cb;
+    color:white;
   }
 }
 
@@ -220,7 +205,8 @@
   }
 
   &:hover {
-    fill: var(--activ-btn-color);
+    fill:#f402a2;
+    background-color: transparent;
     transform: scale(1.1);
   }
 }
@@ -295,7 +281,7 @@
   transition: all 0.6s ease 0s;
 
   &:hover {
-    fill: var(--activ-btn-color);
+    fill:#53a1cb;
     transform: scale(1.1);
   }
 }
