--- a/src/sass/layout/_pagination.scss
+++ b/src/sass/layout/_pagination.scss
@@ -1,16 +1,17 @@
 .pagination {
   margin: 0 auto;
-  background-color: gray;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   width: 290px;
 
-  button:hover {
-    background-color: #ff6b01;
+  button{
+    width: 32px;
   }
+
 }
 .current-page {
-  background-color:#ff6b01;
+  background-color:#f402a2;
 }
+
 
