--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.75);
   transition: all 0.8s ease 0s;
 }
 
@@ -14,23 +14,26 @@
   border-radius: 5px;
   background-color: white;
   margin: auto;
-  right: 0;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  max-height: 90%;
-  max-width: 280px;
   padding: 32px 16px;
+  width: 280px;
+
+  @media screen and (max-width: 767px) {
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    max-height: 90%;
+  }
 
   @include tablet {
-    max-width: 704px;
-    max-height: 552px;
-
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 704px;
   }
 
   @include desktop {
-    max-width: 806px;
-    max-height: 558x;
+    width: 806px;
   }
 }
 
@@ -95,11 +98,11 @@
   width: 100%;
 
   &-key {
-    color: #8c8c8c;
+    color: blue;
   }
 
   &-value {
-    color: var(--primery-text-color);
+    color: black;
   }
 
   td {
@@ -114,12 +117,12 @@
   height: 16px;
   text-align: center;
   border-radius: 5px;
-  color: white;
-  background-color: #53a1cb;
+  color:white;
+  background-color: orange;
 }
 
 .modal__info-value--slash {
-  color: #8c8c8c;
+  color: var(--modal-info-key);
 }
 
 .modal__info-value--grey {
@@ -128,7 +131,7 @@
   height: 16px;
   text-align: center;
   border-radius: 5px;
-  background-color: #f7f7f7;
+  background-color: grey;
 }
 
 .modal__about-title {
